--- a/index(versionA).html
+++ b/index(versionA).html
@@ -39,7 +39,7 @@
         <img src="image/image3.jpg" alt="Jason">
     </picture>
     <p>
-    Passionate programmer with at least two years of experience and mainly focus on C/C++ programming. With knowledge to build a web with HTML/CSS/JavaScript language. A beginner in machine learning, aspects related to supervised learning and unsupervised learning. With knowledge related to computer graphic (OpenGL). Currently an ELITE student of Engineering in the Chinese University of Hong Kong.
+        An undergraduate student in the ELITE stream majoring in Computer Science has a solid foundation in programming through the studies. I am passionate, organized, and competent to work collaboratively across a range of software and research projects. I am skilled in web development (MERN) and data science. I also have adequate knowledge relevant to computer graphics and visualization, game development, and parallel and distributed computing. I am enthusiastic to explore my career in research on advanced technology and software development.
     </p>
     </div>
     <h3>My hobby</h3>
@@ -58,11 +58,13 @@
     <p>Related aspects of knowledge with web design:</p>
     <div style="width:100%;">
     <ol>
+        <li>React.js</li>
         <li>HTML</li>
         <li>CSS</li>
         <li>Javascript</li>
         <li>Node.js with Express</li>
         <li>MongoDB</li>
+        <li>Socket.io</li>
     </ol>
     </div>
     <p>Related aspects of knowledge with machine learning:</p>
@@ -78,6 +80,8 @@
             <li>Recommender Systems</li>
             <li>Convolutional Neural Network</li>
             <li>Generative Adversial Network</li>
+            <li>Transfer Learning</li>
+            <li>Random Forest</li>
             <li>TensorFlow</li>
         </ol>
     </div>
@@ -108,7 +112,7 @@
 </section>
 
 <footer>
-    This website was updated and implemented on <time>2021-01-09</time>. <b>div1121</b>
+    This website was updated and implemented on <time>2021-06-26</time>. <b>div1121</b>
 </footer>
 </article>
 </body>
